# hh-vacancies-parser

./: pyproject.toml
hh_parser/: .gitignore  main.py
hh_parser/src/: README.md  database.py  db_manager.py  hh_api.py
