[tool.poetry]
name = "pythonproject2"
version = "0.1.0"
description = ""
authors = ["Kir <kozinkirill85@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
psycopg2 = "^2.9.11"
config = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
